--- a/views/public/live.ejs
+++ b/views/public/live.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="6UhcIl_FY6btNpMlR20k54CX018T0cjAm0dZsPJoDJA" />
     <title>ALLO Seker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/style.css">
