--- a/views/public/live.ejs
+++ b/views/public/live.ejs
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="6UhcIl_FY6btNpMlR20k54CX018T0cjAm0dZsPJoDJA" />
     <title>ALLO Seker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/style.css">
@@ -31,7 +30,7 @@
 
     <main class="max-w-6xl mx-auto px-4 sm:px-6 py-12">
         <div class="mb-6">
-            <h1 class="text-3xl font-bold text-white mb-2">ALLO disponibles</h1>
+            <h1 class="text-3xl font-bold text-white mb-2">ALLO'S disponibles</h1>
             <p class="text-gray-400">Reserve ton service en un clic</p>
         </div>
 
