--- a/views/public/live.ejs
+++ b/views/public/live.ejs
@@ -101,7 +101,7 @@
                                     <% } %>
                                 </div>
                                 <% if (allo.timeStatus === 'not_yet') { %>
-                                    <span class="badge badge-warning">Bientot</span>
+                                    <span class="badge badge-warning">Bientôt</span>
                                 <% } else if (allo.availableSlots === 0) { %>
                                     <span class="badge badge-danger">Complet</span>
                                 <% } else { %>
