exemple num tel

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -68,7 +68,7 @@
 
                     <div>
                         <label for="phone" class="block text-sm font-medium text-gray-300 mb-2">Telephone</label>
-                        <input type="tel" id="phone" name="phone" placeholder="06 XX XX XX XX"
+                        <input type="tel" id="phone" name="phone" placeholder="+33 6 XX XX XX XX"
                                class="input w-full px-4 py-3 rounded-xl">
                     </div>
 
