--- a/views/public/allo.ejs
+++ b/views/public/allo.ejs
@@ -142,7 +142,7 @@
 
                             <div>
                                 <label for="phone" class="block text-sm text-gray-400 mb-1">Telephone</label>
-                                <input type="tel" id="phone" name="phone" required placeholder="06 XX XX XX XX"
+                                <input type="tel" id="phone" name="phone" required placeholder="+33 6 XX XX XX XX"
                                        class="input w-full px-3 py-2 rounded-lg text-sm">
                             </div>
 
