--- a/views/public/allo.ejs
+++ b/views/public/allo.ejs
@@ -54,6 +54,10 @@
                             <span class="theme-nourriture text-xs px-2 py-0.5 rounded-full font-medium mt-2 inline-block">Nourriture</span>
                         <% } else if (allo.theme === 'Allo Pôle') { %>
                             <span class="theme-Pôle text-xs px-2 py-0.5 rounded-full font-medium mt-2 inline-block">Pôle</span>
+                        <% } else if (allo.theme === 'Allo Transport') { %>
+                            <span class="theme-transport text-xs px-2 py-0.5 rounded-full font-medium mt-2 inline-block">Transport</span>
+                        <% } else if (allo.theme === 'Allo Fun') { %>
+                            <span class="theme-fun text-xs px-2 py-0.5 rounded-full font-medium mt-2 inline-block">Fun</span>
                         <% } else { %>
                             <span class="theme-autres text-xs px-2 py-0.5 rounded-full font-medium mt-2 inline-block">Autres</span>
                         <% } %>
