--- a/views/bde/dashboard.ejs
+++ b/views/bde/dashboard.ejs
@@ -84,6 +84,10 @@
                                                 <span class="theme-nourriture text-xs px-3 py-1 rounded-full font-medium">Nourriture</span>
                                             <% } else if (allo.theme === 'Allo Pôle') { %>
                                                 <span class="theme-Pôle text-xs px-3 py-1 rounded-full font-medium">Pôle</span>
+                                            <% } else if (allo.theme === 'Allo Transport') { %>
+                                                <span class="theme-transport text-xs px-3 py-1 rounded-full font-medium">Transport</span>
+                                            <% } else if (allo.theme === 'Allo Fun') { %>
+                                                <span class="theme-fun text-xs px-3 py-1 rounded-full font-medium">Fun</span>
                                             <% } else { %>
                                                 <span class="theme-autres text-xs px-3 py-1 rounded-full font-medium">Autres</span>
                                             <% } %>
@@ -159,6 +163,10 @@
                                                 <span class="theme-nourriture text-xs px-3 py-1 rounded-full font-medium">Nourriture</span>
                                             <% } else if (allo.theme === 'Allo Pôle') { %>
                                                 <span class="theme-Pôle text-xs px-3 py-1 rounded-full font-medium">Pôle</span>
+                                            <% } else if (allo.theme === 'Allo Transport') { %>
+                                                <span class="theme-transport text-xs px-3 py-1 rounded-full font-medium">Transport</span>
+                                            <% } else if (allo.theme === 'Allo Fun') { %>
+                                                <span class="theme-fun text-xs px-3 py-1 rounded-full font-medium">Fun</span>
                                             <% } else { %>
                                                 <span class="theme-autres text-xs px-3 py-1 rounded-full font-medium">Autres</span>
                                             <% } %>
