Reserve next available slot for shotgun

--- a/views/public/allo.ejs
+++ b/views/public/allo.ejs
@@ -129,7 +129,7 @@
                         <div id="shotgun-message" class="hidden mb-4 p-4 rounded-lg text-center"></div>
 
                         <form id="shotgun-form" class="space-y-4">
-                            <input type="hidden" id="slot-id" value="<%= availableSlots[0].id %>">
+                            <input type="hidden" id="allo-id" value="<%= allo.id %>">
 
                             <div class="grid grid-cols-2 gap-4">
                                 <div>
